modified all the base64 encodings to use javautil class base64